# operon_builder

./: fastaparser.py  hmmsearch.py  operon_builder.py  prodigal.py  pyproject.toml  summarize.py  utils.py
src/operon_finder/: operon_builder.py  prodigal.py  summarize.py
src/operon_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
