[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "operon-finder"
version = "0.1.0"
authors = [{ name = "Cody Martin", email = "codycmar10@gmail.com" }]
description = "Detect colocalized groups of genes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = ["dna_features_viewer", "pandas", "numpy", "matplotlib"]

[project.scripts]
operon-builder = "operon_finder.operon_builder:main"

[project.urls]
"Homepage" = "https://github.com/cody-mar10/operon_finder"
"Bug Tracker" = "https://github.com/cody-mar10/operon_finder/issues"

[tool.ruff]
src = ["src"]
line-length = 90

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # allow unused imports in `__init__.py`

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.setuptools.package-data]
lightning_cv = ["py.typed"]
